css modifications, added a scrollbar for the tweet text if needed, changed the error signin and signup message

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -27,7 +27,7 @@
   width: 60%;
   background-color: #2a3c50;
   padding-left: 2rem;
-  color: white;
+  color: rgb(241, 233, 233);
 }
 
 .bird_div {
