--- a/styles/OneTweet.module.css
+++ b/styles/OneTweet.module.css
@@ -1,51 +1,70 @@
 .tweetCard {
-    height: 170px;
-    border: solid #666a7c 1.5px;
-    padding-top: 2%;
-    padding-right: 3%;
-    padding-bottom: 2%;
-    padding-left: 3%;
-
+  height: 170px;
+  border: solid #666a7c 1.5px;
+  padding-top: 2%;
+  padding-right: 3%;
+  padding-bottom: 2%;
+  padding-left: 3%;
 }
 
 .userInfo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .egg {
-    height: 40px;
-    width: 40px;
-    background-color: #4096FF;
-    border-radius: 50%;
-    padding: 5px;
-    margin-right: 15px;
+  height: 40px;
+  width: 40px;
+  background-color: #4096ff;
+  border-radius: 50%;
+  padding: 5px;
+  margin-right: 15px;
 }
 
 .userFirstname {
-    font-weight: bold;
-    margin-right: 5px;
-    color: white;
+  font-weight: bold;
+  margin-right: 5px;
+  color: white;
 }
 
 .userUsername {
-    color: #666a7c;
-    margin-right: 5px;
+  color: #666a7c;
+  margin-right: 5px;
 }
 
-.tweetTime{
-    color: #666a7c;
+.tweetTime {
+  color: #666a7c;
 }
 
 .tweetText {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    color: white;
+  max-height: 4rem;
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: white;
+  overflow-x: hidden;
+}
+
+.tweetText::-webkit-scrollbar {
+  width: 8px;
+}
+
+.tweetText::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.tweetText::-webkit-scrollbar-thumb {
+  background-color: #1677ff;
+  border-radius: 10px;
+}
+
+.tweetText::-webkit-scrollbar-thumb:hover {
+  background-color: #4096ff;
 }
 
 .likeCount {
-    margin-left: 10px;
-    margin-right: 10px;
-    color: white;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
 }
