--- a/styles/Trends.module.css
+++ b/styles/Trends.module.css
@@ -1,48 +1,47 @@
 .main {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 .title {
-    font-size: 20px;
-    color: white;
-    cursor: pointer;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
 }
 
 .title:hover {
-    color: #4096FF;
-  }
+  color: #4096ff;
+}
 
-.trendsBox{
-    width: 90%;
-    background-color: #38506B;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2%;
+.trendsBox {
+  width: 90%;
+  background-color: #38506b;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2%;
 }
 
 .hashCard {
-    width: 100%;
-    height: 70px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
 }
 
 .hashTag {
-    color: white;
-    font-weight: 700;
-    margin-bottom: 8px ;
-    cursor: pointer;
+  color: white;
+  font-weight: 700;
+  margin-bottom: 8px;
+  cursor: pointer;
 }
 
 .hashTag:hover {
-    color: #4096FF;
-  }
-
-.hashCount {
-    font-size: 12px;
-    color: #666a7c;
-    font-weight: 800;
+  color: #4096ff;
 }
 
+.hashCount {
+  font-size: 12px;
+  color: #666a7c;
+  font-weight: 800;
+}
