--- a/styles/TweetPosting.module.css
+++ b/styles/TweetPosting.module.css
@@ -1,38 +1,40 @@
 .main {
-    color: white;
-    padding-left: 20px;
+  color: white;
+  padding-left: 20px;
 }
 
 .title_div {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .input_div {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .textArea {
-    width: 600px;
-    border: solid 3px #666a7c;
-    background-color: #2A3C50;
-    color: white;
+  width: 600px;
+  border: solid 3px #666a7c;
+  background-color: #2a3c50;
+  color: rgb(107, 105, 105);
+  font-size: large;
+  font-weight: bold;
 }
 
-.textArea::placeholder{
-    color: white;
+.textArea::placeholder {
+  color: white;
 }
 
 .button_div {
-    margin-top: 30px;
-    margin-right: 100px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  margin-top: 30px;
+  margin-right: 100px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .tweetButton {
-    width: 100px;
-    border-radius: 20px;
-    margin-left: 20px;
+  width: 100px;
+  border-radius: 20px;
+  margin-left: 20px;
 }
