--- a/styles/Trends.module.css
+++ b/styles/Trends.module.css
@@ -16,6 +16,8 @@
 
 .trendsBox {
   width: 90%;
+  max-height: 80vh;
+  overflow-y: auto;
   background-color: #38506b;
   border-radius: 10px;
   display: flex;
@@ -24,9 +26,26 @@
   padding: 2%;
 }
 
+.trendsBox::-webkit-scrollbar {
+  width: 15px;
+}
+
+.trendsBox::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.trendsBox::-webkit-scrollbar-thumb {
+  background-color: #1677ff;
+  border-radius: 10px;
+}
+
+.trendsBox::-webkit-scrollbar-thumb:hover {
+  background-color: #4096ff;
+}
+
 .hashCard {
   width: 100%;
-  height: 70px;
+  min-height: 70px;
   display: flex;
   flex-direction: column;
 }
