--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -11,20 +11,20 @@
   height: 100%;
   width: 40%;
   background-image: url('/loginImage.png');
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
 
 .bigBird {
-  height: 350px;
-  width: 350px;
+  height: 12rem;
+  width: 12rem;
   transform: rotate(3.142rad);
 }
 
 .rightSide {
   height: 100vh;
-  width: 60%;
+  width: 100%;
   background: linear-gradient(to top left, #4096ff, #2a3c50 40%);
   padding-left: 2rem;
   color: rgb(241, 233, 233);
@@ -44,44 +44,45 @@
 .text_div {
   width: 50%;
 }
+
 .bigTitle {
-  font-size: 75px;
+  font-size: 40px;
   font-weight: 900;
 }
 
 .smallTitle {
-  font-size: 40px;
+  font-size: 20px;
 }
 
 .buttons_div {
-  width: 40%;
+  width: 65%;
   display: flex;
   flex-direction: column;
 }
 
 .signUpbutton {
   border-radius: 30px;
-  width: 250px;
-  height: 50px;
-  font-size: 20px;
+  width: 10.625rem;
+  height: 2.5rem;
+  font-size: 18px;
   font-weight: bolder;
-  margin: 20px 0px 20px 0px;
+  margin: 1.25rem 0rem 1.25rem 0rem;
 }
 
 .signText {
-  margin-left: 12px;
   font-weight: bolder;
 }
+
 .signInbutton {
   border-radius: 30px;
-  width: 250px;
-  height: 50px;
-  font-size: 20px;
+  width: 10.625rem;
+  height: 2.5rem;
+  font-size: 18px;
   font-weight: bolder;
   background-color: #2a3c50;
   border: solid grey 1.5px;
   color: #4096ff;
-  margin: 20px 0px 20px 0px;
+  margin: 1.25rem 0rem 1.25rem 0rem;
 }
 
 .emphasis {
@@ -90,4 +91,51 @@
   text-decoration: underline;
   text-underline-offset: 4px;
   color: #4096ff;
+}
+
+@media (min-width: 640px) {
+  .leftSide {
+    display: flex;
+  }
+
+  .rightSide {
+    width: 60%;
+  }
+
+  .bigTitle {
+    font-size: 60px;
+  }
+
+  .signUpbutton {
+    width: 12.625rem;
+    height: 2.8rem;
+  }
+
+  .signInbutton {
+    width: 12.625rem;
+    height: 2.8rem;
+  }
+}
+
+@media (min-width: 875px) {
+  .bigBird {
+    height: 21.875rem;
+    width: 21.875rem;
+  }
+
+  .bigTitle {
+    font-size: 75px;
+  }
+
+  .signUpbutton {
+    width: 15.625rem;
+    height: 3.125rem;
+    font-size: 20px;
+  }
+
+  .signInbutton {
+    width: 15.625rem;
+    height: 3.125rem;
+    font-size: 20px;
+  }
 }
