--- a/styles/Trends.module.css
+++ b/styles/Trends.module.css
@@ -16,18 +16,19 @@
 
 .trendsBox {
   width: 90%;
-  max-height: 80vh;
+  max-height: 20vh;
   overflow-y: auto;
   padding: 2%;
+  margin-bottom: 2rem;
   background-color: #38506b;
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
 }
 
 .trendsBox::-webkit-scrollbar {
-  width: 15px;
+  width: 8px;
 }
 .trendsBox::-webkit-scrollbar-track {
   background-color: white;
@@ -41,7 +42,7 @@
 }
 
 .hashCard {
-  width: 100%;
+  width: 50%;
   min-height: 70px;
   display: flex;
   flex-direction: column;
@@ -62,4 +63,20 @@
   font-size: 12px;
   color: #666a7c;
   font-weight: 800;
+}
+
+@media (min-width: 875px) {
+  .trendsBox {
+    max-height: 80vh;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .trendsBox::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  .hashCard {
+    width: 100%;
+  }
 }
