--- a/styles/TweetPosting.module.css
+++ b/styles/TweetPosting.module.css
@@ -1,10 +1,11 @@
 .main {
   color: white;
   padding-left: 20px;
+  padding-right: 20px;
 }
 
 .title_div {
-  font-size: 25px;
+  font-size: 22px;
 }
 
 .input_div {
@@ -34,7 +35,7 @@
 }
 
 .button_div {
-  margin-top: 30px;
+  margin-top: 15px; /** CHANGED*/
   margin-right: 100px;
   display: flex;
   justify-content: flex-end;
@@ -45,4 +46,14 @@
   width: 100px;
   border-radius: 20px;
   margin-left: 20px;
+}
+
+@media (min-width: 875px) {
+  .title_div {
+    font-size: 25px;
+  }
+
+  .button_div {
+    margin-top: 30px;
+  }
 }
