--- a/styles/SignIn.module.css
+++ b/styles/SignIn.module.css
@@ -2,37 +2,33 @@
   height: 50px;
   width: 50px;
   transform: rotate(3.142rad);
+  margin-left: 7.5rem;
   color: white;
-  margin-left: 250px;
 }
 
 .modaleInText {
   font-size: 20px;
   font-weight: bolder;
   color: white;
-  margin-left: 170px;
 }
 
 .modaleInput {
-  margin-left: 125px;
-  width: 300px;
-  height: 60px;
+  width: 18.75rem;
+  height: 3.75rem;
   border: solid #808080 1.5px;
   color: white;
 }
 
 .modaleButton {
-  width: 200px;
+  width: 12.5rem;
   border-radius: 15px;
   background-color: white;
   color: black;
   font-weight: bolder;
-  margin-right: 11rem;
 }
 
 .modaleError {
   font-size: 15px;
   font-weight: bolder;
-  margin-left: 29%;
   color: red;
 }
