--- a/styles/SignUp.module.css
+++ b/styles/SignUp.module.css
@@ -3,36 +3,33 @@
   width: 50px;
   transform: rotate(3.142rad);
   color: white;
-  margin-left: 250px;
+  margin-left: 7.5rem;
+  align-self: center;
 }
 
 .modaleUpText {
   font-size: 20px;
   font-weight: bolder;
-  margin-left: 125px;
   color: white;
 }
 
 .modaleInput {
-  margin-left: 125px;
-  width: 300px;
-  height: 60px;
+  width: 18.75rem;
+  height: 3.75rem;
   border: solid #808080 1.5px;
   color: white;
 }
 
 .modaleButton {
-  width: 200px;
+  width: 12.5rem;
   border-radius: 15px;
   background-color: white;
   color: black;
   font-weight: bolder;
-  margin-right: 11rem;
 }
 
 .modaleError {
   font-size: 15px;
   font-weight: bolder;
-  margin-left: 24%;
   color: red;
 }
