--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,24 +5,18 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100%;
-  /* min-height: 90vh ; */
 }
-
-/* * {
-  box-sizing: border-box;
-} */
 
 /* css background des modals */
 .ant-modal .ant-modal-content {
   background-color: #2a3c50;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* css placeholder des modals */
 .ant-modal .ant-modal-content ::placeholder {
   color: white;
 }
-
-/* .ant-input-textarea-show-count {
-  background-color: red;
-  color: greenyellow;
-} */
