--- a/styles/Trends.module.css
+++ b/styles/Trends.module.css
@@ -23,6 +23,7 @@
   background-color: #38506b;
   border-radius: 10px;
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
 }
@@ -32,6 +33,7 @@
 }
 .trendsBox::-webkit-scrollbar-track {
   background-color: white;
+  border-radius: 50px;
 }
 .trendsBox::-webkit-scrollbar-thumb {
   background-color: #1677ff;
@@ -42,7 +44,7 @@
 }
 
 .hashCard {
-  width: 50%;
+  margin: 0px 5px 0px 5px;
   min-height: 70px;
   display: flex;
   flex-direction: column;
@@ -70,6 +72,7 @@
     max-height: 80vh;
     flex-direction: column;
     flex-wrap: nowrap;
+    overflow-x: hidden;
   }
 
   .trendsBox::-webkit-scrollbar {
