--- a/styles/TweetPosting.module.css
+++ b/styles/TweetPosting.module.css
@@ -1,8 +1,6 @@
 .main {
   color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 10px;
+  padding: 0px 20px 10px 20px;
   display: flex;
   flex-direction: column;
 }
