--- a/styles/TweetPosting.module.css
+++ b/styles/TweetPosting.module.css
@@ -1,10 +1,3 @@
-.main {
-  color: white;
-  padding: 0px 20px 10px 20px;
-  display: flex;
-  flex-direction: column;
-}
-
 .title_div {
   font-size: 22px;
 }
@@ -15,7 +8,8 @@
 }
 
 .textArea {
-  width: 600px;
+  width: 100%;
+  height: 10%;
   border: solid 3px #666a7c;
   background-color: #2a3c50;
   color: white;
@@ -23,10 +17,7 @@
   font-weight: bold;
 }
 
-.textArea:focus {
-  background-color: #31465e;
-}
-
+.textArea:focus,
 .textArea:hover {
   background-color: #31465e;
 }
